Category service added

--- a/mymanuals-service/pom.xml
+++ b/mymanuals-service/pom.xml
@@ -47,6 +47,12 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>mymanuals</groupId>
+            <artifactId>category-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
