--- a/material-service/pom.xml
+++ b/material-service/pom.xml
@@ -1,12 +1,11 @@
-<?xml version="1.0"?>
-<project
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-        xmlns="http://maven.apache.org/POM/4.0.0">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>representative-service</artifactId>
-    <name>representative-service</name>
+    <artifactId>material-service</artifactId>
+    <name>material-service</name>
     <packaging>jar</packaging>
 
     <parent>
@@ -24,7 +23,13 @@
 
         <dependency>
             <groupId>mymanuals</groupId>
-            <artifactId>company-service</artifactId>
+            <artifactId>representative-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mymanuals</groupId>
+            <artifactId>product-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
