--- a/mymanuals-service/pom.xml
+++ b/mymanuals-service/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>category-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>mymanuals</groupId>
+            <artifactId>material-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
