--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -21,6 +21,18 @@
             <artifactId>domain</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>mymanuals</groupId>
+            <artifactId>representative-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mymanuals</groupId>
+            <artifactId>category-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
