--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>material-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>mymanuals</groupId>
+            <artifactId>consumer-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
