--- a/domain/src/main/resources/application.properties
+++ b/domain/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
+#Static content path
+spring.resources.static-locations=file:${user.dir}
