Added email sending functionality via SendGrid 	modified:   .gitignore
	modified:   domain/pom.xml
	new file:   domain/src/main/java/org/domain/utils/Email.java

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,9 @@ nb-configuration.xml
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+##########################
+## Custom
+##########################
+
+sendgrid.env
