--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <version>0.10.5</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+        </dependency>
     </dependencies>
 
     <modules>
