--- a/domain/src/main/resources/application.properties
+++ b/domain/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.datasource.url=jdbc:h2:file:~/test;DB_CLOSE_ON_EXIT=FALSE;IFEXISTS=TRUE;D
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 # Static content path
 spring.resources.static-locations=file:${user.dir}
